:bug: FIX: Single card active zone and card glow overflow on mobile

--- a/assets/css/sections/about.css
+++ b/assets/css/sections/about.css
@@ -6,7 +6,7 @@
   background-color: var(--color-dark);
   color: var(--color-light);
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; removed to allow card glow to spill over if needed */
   background-image: url("../../img/textures/temporal-gradient.png");
   background-blend-mode: normal;
   background-size: 250px;
